engine-net-2/examples/Errors/SequenceNameUsageBlockedByVariableOfSameName.grs
new graph "Rules.grg"

exec (n:N)=init ;> s:boolean=false ;> (m:M)=s(n)

quit
